# holoscan-cli

./: .gitignore  .markdownlintignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  build.py  pyproject.toml
.github/: CI.md  README.md  copy-pr-bot.yaml  dependabot.yml
.github/scripts/: assert_wheel_contents.sh  cpu_cli_docker_smoke.sh  smoke_test.sh  tool_runner_smoke.sh
.github/workflows/: Dockerfile  blossom-ci.yml  check.yaml  codacy.yml  codeql-analysis.yml  codeql.yaml  dependency-review.yml  e2e.yml  main.yaml  release.yaml
.lint/: codespell_ignore_words.txt  markdownlint.yaml
holoscan/cli/packager/: arguments.py
releases/2.9.0/: artifacts.json
releases/3.0.0/: artifacts.json
releases/3.1.0/: artifacts.json
releases/3.10.0/: artifacts-cu12.json  artifacts.json
releases/3.11.0/: artifacts-cu12.json  artifacts.json
releases/3.2.0/: artifacts.json
releases/3.3.0/: artifacts.json
releases/3.4.0/: artifacts.json
releases/3.4.1/: artifacts.json
releases/3.5.0/: artifacts.json
releases/3.6.0/: artifacts.json
releases/3.7.0/: artifacts-cu12.json  artifacts.json
releases/3.8.0/: artifacts-cu12.json  artifacts.json
releases/3.9.0/: artifacts-cu12.json  artifacts.json
releases/4.0.0/: artifacts-cu12.json  artifacts.json
releases/4.1.0/: artifacts-cu12.json  artifacts.json
releases/4.2.0/: artifacts-cu12.json  artifacts.json
src/: license-header.txt
src/holoscan_cli/: __init__.py  __main__.py  cli.py  command_plan.py  command_plan.schema.json  container.py  holoscan  logging.json  status.py  system_check.py  util.py
src/holoscan_cli/commands/: build.py  clear_cache.py  containers.py  create.py  devcontainer.py  info.py  install.py  lint.py  package.py  project.py  registry.py  run.py  setup_cmd.py  test_cmd.py  tooling.py  vscode.py  workspace.py
src/holoscan_cli/common/: argparse_types.py  artifact_sources.py  constants.py  dockerutils.py  enum_types.py  exceptions.py  sdk_utils.py  utils.py
src/holoscan_cli/container/: __init__.py  core.py  parsers.py  signals.py
src/holoscan_cli/metadata/: gather_metadata.py  metadata_validator.py  module.schema.json  utils.py  workflow.schema.json
src/holoscan_cli/nics/: __init__.py  nics.py
src/holoscan_cli/packager/: __init__.py  arguments.py  config_reader.py  container_builder.py  manifest_files.py  models.py  package_command.py  packager.py  parameters.py  platforms.py
src/holoscan_cli/packager/templates/: Dockerfile-cu12.jinja2  Dockerfile.jinja2  dockerignore  tools.sh
src/holoscan_cli/project/: __init__.py  cli.py  container.py  util.py
src/holoscan_cli/project/cmake/: pybind11_add_holohub_module.cmake
src/holoscan_cli/project/metadata/: application.schema.json  gather_metadata.py  metadata_validator.py
src/holoscan_cli/runner/: __init__.py  resources.py  run_command.py  runner.py
src/holoscan_cli/setup_scripts/: Dockerfile.util  __init__.py  benchmarking.sh  debug.sh  sccache.sh  template.sh  xvfb.sh
src/holoscan_cli/testing/: container.ctest
src/holoscan_cli/utils/: cmake_manifest.py  docker.py  env.py  env_info.py  external_resolver.py  formatting.py  holohub.py  host_setup.py  io.py  json_output.py  logging.py  paths.py  sdk.py  subprocess.py  text.py  versions.py
src/holoscan_cli/version/: __init__.py  version.py
tests/app/: artifacts.json  validate.sh
tests/app/expected-output/app/: application-title.txt  arguments.txt  models.txt
tests/app/expected-output/tools/: env.txt  help.txt  show.txt
tests/app/python/: __main__.py  app-map.yaml  app.yaml  cli_test_app.py  requirements.txt
tests/automation/: README.md  artifacts.json  check.sh  config.schema.json  package.sh  test.sh
tests/automation/endoscopy-tool-tracking-cpp/: app.yaml
tests/automation/endoscopy-tool-tracking-python/: app.yaml  config.json
tests/automation/endoscopy_tool_tracking_cpp/: app.yaml  config.json
tests/automation/endoscopy_tool_tracking_python/: app.yaml
tests/automation/hello-world/: app.yaml  config.json
tests/automation/object-detection-torch/: app.yaml  config.json
tests/automation/object_detection_torch/: app.yaml  config.json
tests/automation/video-replayer-cpp/: app.yaml  config.json
tests/automation/video-replayer-python/: app.yaml  config.json
tests/fixtures/holohub_smoke/: holohub
tests/fixtures/holohub_smoke/applications/smoke_app/: README.md  metadata.json
tests/fixtures/module_metadata/valid/: module_advertises_operators.json
tests/unit/: __init__.py  artifacts.json  conftest.py  test_cli_behaviors.py  test_cli_parser.py  test_cmake_manifest.py  test_command_plan.py  test_command_plan_cli.py  test_command_registry.py  test_container_core.py  test_container_recursion.py  test_create_module.py  test_docker_utils.py  test_env_info.py  test_external_resolver.py  test_gather_metadata.py  test_host_setup.py  test_install_cmd.py  test_io.py  test_lifecycle_commands.py  test_lint.py  test_main.py  test_metadata_validator.py  test_module_schema.py  test_package_cmd.py  test_package_data.py  test_sdk_utils.py  test_setup_cmd.py  test_smoke_fixture.py  test_status.py  test_system_check.py
tests/unit/common/: package-source.json  test_argparse_types.py  test_artifact_source.py  test_dockerutils.py  test_sdk_utils.py  test_utils.py
tests/unit/nics/: test_nics.py
tests/unit/packager/: test_arguments.py  test_config_reader.py  test_container_builder.py  test_manifest_files.py  test_models.py  test_package_command.py  test_packager.py  test_parameters.py  test_platforms.py
tests/unit/project/: test_container_recursion.py  test_lint.py
tests/unit/runner/: test_cli_resources.py  test_run_command.py  test_runner.py
tests/unit/version/: test_version.py
tests/verification/: .shellspec
tests/verification/libs/: nics.sh
tests/verification/spec/: nics_spec.sh  spec_helper.sh  version_spec.sh
