# SPDX-FileCopyrightText: Copyright (c) 2024-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
[project]
dynamic = ["version"]
name = "holoscan-cli"
requires-python = ">=3.10,<3.14"
dependencies = [
    "pip (>25.1.0)",
    "python-on-whales (>=0.77.0)",
    "Jinja2 (>=3.1.6,<4.0.0)",
    "packaging (>=25.0,<26.0)",
    "pyyaml (>=6.0,<7.0)",
    "requests (>=2.32,<3.0)",
    "psutil (>=7.0.0,<8.0)",
]

[tool.poetry]
requires-poetry = ">=2.0"
description = "Command line interface for packaging and running Holoscan applications."
authors = ["NVIDIA"]
maintainers = ["mocsharp"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "holoscan_cli", from = "src"  }]
homepage = "https://github.com/nvidia-holoscan/holoscan-cli"
repository = "https://github.com/nvidia-holoscan/holoscan-cli"
documentation = "https://docs.nvidia.com/holoscan/sdk-user-guide/index.html"
keywords = [
    "AI",
    "holoscan",
    "medical",
    "streaming",
    "HPC",
    "nvidia",
    "docker",
    "container",
]
classifiers = [
    # See https://pypi.python.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: GPU :: NVIDIA CUDA :: 12",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
version = "0.0.0"


[tool.poetry.group.dev.dependencies]
gitchangelog = "^3.0.4"

[tool.poetry.group.test.dependencies]
coverage= "^7.13.4"
mypy= "^1.19.1"
pre-commit = "^4.5.1"
pytest-cov= "^7.0.0"
pytest-mock= "^3.15.1"
pytest = "^9.0.2"
coveralls = { version = "^4.0.2", markers = "python_version < '3.13'" }

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "*"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.5.0,<2.0.0", extras = ["plugin"] }

[project.scripts]
holoscan = 'holoscan_cli.__main__:main'
monai-deploy = 'holoscan_cli.__main__:main'

[tool.codespell]
skip = '.ruff_cache'
count = true
quiet-level = 3

[tool.flake8]
max-line-length = 160

[tool.pytest.ini_options]
pythonpath = "src"
addopts = """
--import-mode=importlib \
--cov=holoscan_cli ./tests/unit \
--cov-append \
--cov-report=term-missing \
--cov-report lcov:tests/reports/.coverage.lcov \
--ignore=docs/
"""

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
format-jinja = """
    {%- if branch == 'main' -%}
        {{ serialize_pep440(base, stage, dev=distance) }}
    {%- elif branch and branch.startswith("release/") -%}
        {# Debug: env["ga"] = {{ env["ga"] }} #}
        {%- if env["ga"] == 'true' -%}
            {{ serialize_pep440(base)}}
        {%- else -%}
            {%- if 'rc' in env -%}
                {{ serialize_pep440(base, stage="rc", revision=env["rc"] ) }}
            {%- else -%}
                {{ serialize_pep440(base, stage="rc", revision=distance) }}
            {%- endif -%}
        {%- endif -%}
    {%- else -%}
        {%- if 'GITHUB_RUN_ID' in env -%}
            {{ serialize_pep440(base, stage="alpha", revision=env['GITHUB_RUN_ID']) }}
        {%- else -%}
            {{ serialize_pep440(base, stage="alpha", revision=distance) }}
        {%- endif -%}
    {%- endif -%}
"""

[build-system]
requires = ["poetry-core>=2.0.0", "poetry-dynamic-versioning>=1.7.1,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
