# SPDX-FileCopyrightText: Copyright (c) 2024-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
[project]
name = "holoscan-cli"
dynamic = ["version"]
description = "Command line interface for HoloHub-style Holoscan source-project workflows."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10,<3.14"
authors = [{ name = "NVIDIA" }]
maintainers = [{ name = "NVIDIA" }]
keywords = [
    "AI",
    "holoscan",
    "medical",
    "streaming",
    "HPC",
    "nvidia",
    "docker",
    "container",
]
classifiers = [
    # See https://pypi.python.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: GPU :: NVIDIA CUDA :: 12",
    "Environment :: GPU :: NVIDIA CUDA :: 13",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
# ``pip install 'holoscan-cli[create]'`` enables the entire ``holoscan create``
# happy path: schema validation (``jsonschema`` + ``referencing``) plus the
# cookiecutter scaffold used to materialize the new project. ``jsonschema>=4.18``
# is required for the ``Draft202012Validator(..., registry=...)`` API used by
# ``metadata_validator.py``; older versions silently lack the kwarg and fail at
# runtime.
create = [
    "jsonschema (>=4.18,<5.0)",
    "referencing (>=0.30)",
    "cookiecutter (>=2.7.1)",
]

[project.urls]
Homepage = "https://github.com/nvidia-holoscan/holoscan-cli"
Repository = "https://github.com/nvidia-holoscan/holoscan-cli"
Documentation = "https://docs.nvidia.com/holoscan/sdk-user-guide/index.html"

[tool.poetry]
requires-poetry = ">=2.0"
packages = [{ include = "holoscan_cli", from = "src" }]
include = [
    { path = "src/holoscan_cli/metadata/*.schema.json", format = ["sdist", "wheel"] },
    { path = "src/holoscan_cli/setup_scripts/*", format = ["sdist", "wheel"] },
    { path = "src/holoscan_cli/testing/**/*", format = ["sdist", "wheel"] },
]
version = "0.0.0"


[tool.poetry.group.dev.dependencies]
gitchangelog = "^3.0.4"

[tool.poetry.group.test.dependencies]
coverage= "^7.14.3"
mypy= "^1.19.1"
pre-commit = "^4.5.1"
pytest-cov= "^7.0.0"
pytest-mock= "^3.15.1"
pytest = "^9.1.1"
coveralls = { version = "^4.1.0", markers = "python_version < '3.13'" }
tomli = { version = "^2.4", markers = "python_version < '3.11'" }
# Mirrors the runtime ``[create]`` extra so the unit tests for the
# schema validator (``test_metadata_validator.py``) and the smoke
# fixture (``test_smoke_fixture.py``) can import them without
# requiring callers to ``pip install 'holoscan-cli[create]'`` first.
jsonschema = ">=4.26.0,<5.0"
referencing = ">=0.37.0"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.5.0,<2.0.0", extras = ["plugin"] }

[project.scripts]
holoscan = 'holoscan_cli.__main__:main'
holoscan-cli = 'holoscan_cli.__main__:main'

[tool.codespell]
skip = '.ruff_cache,.cache,build,dist,htmlcov,tests/reports'
count = true
quiet-level = 3

[tool.isort]
profile = "black"
line_length = 100
known_first_party = "holoscan_cli"
skip_glob = ["build*/*", "dist/*", ".cache/*", ".ruff_cache/*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]
extend-exclude = '''
(
  ^\.cache/
  | ^build[^/]*/
  | ^dist/
  | tests/reports/
)
'''

[tool.ruff]
line-length = 100
target-version = "py310"
cache-dir = ".cache/ruff"
exclude = [
  ".cache",
  ".ruff_cache",
  "build*",
  "dist",
  "tests/reports",
]

[tool.ruff.lint.isort]
known-first-party = ["holoscan_cli"]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = """
--import-mode=importlib \
--cov=holoscan_cli ./tests/unit \
--cov-append \
--cov-report=term-missing \
--cov-report lcov:tests/reports/.coverage.lcov
"""

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
format-jinja = """
    {%- if branch == 'main' -%}
        {{ serialize_pep440(base, stage, dev=distance) }}
    {%- elif branch and branch.startswith("release/") -%}
        {# Debug: env["ga"] = {{ env["ga"] }} #}
        {%- if env.get("ga") == 'true' -%}
            {{ serialize_pep440(base)}}
        {%- else -%}
            {%- if env.get("rc") -%}
                {{ serialize_pep440(base, stage="rc", revision=env["rc"] ) }}
            {%- else -%}
                {{ serialize_pep440(base, stage="rc", revision=distance) }}
            {%- endif -%}
        {%- endif -%}
    {%- else -%}
        {%- if 'GITHUB_RUN_ID' in env -%}
            {{ serialize_pep440(base, stage="alpha", revision=env['GITHUB_RUN_ID']) }}
        {%- else -%}
            {{ serialize_pep440(base, stage="alpha", revision=distance) }}
        {%- endif -%}
    {%- endif -%}
"""

[build-system]
requires = ["poetry-core>=2.0.0", "poetry-dynamic-versioning>=1.7.1,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
